test/lambda/negative/syntax/statement_comparison_ambiguous.ls
// @expect-error: E100
// @description: Bare statement-level comparison is ambiguous with element syntax.

"a" < "b"
